<resources>
    <string name="app_name">Mobile Number Locator</string>
    <string name="no_gps">Requires GPS , would you like to enable?</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="compass_cancel">Cancel</string>
    <string name="enter_number">Enter Mobile Number</string>
    <string name="call_popup">Call</string>
    <string name="save_popup">Save</string>
    <string name="block_popup">Block</string>
    <string name="track_popup">Track</string>
    <string name="please_install_google_map">Install Google Map</string>
    <string name="traffic_finder">Traffic</string>
    <string name="my_location">My Location</string>
    <string name="buildings">Buildings</string>
    <string name="indoor">Indoor</string>
    <string name="normal">Normal</string>
    <string name="hybrid">Hybrid</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="none_map">None</string>
    <string name="map_not_ready">Map is not ready yet</string>
    <string name="urlussd">https://getech2018.github.io/stickers/plans.json</string>
    <string name="url">https://komparify.com/IreffWeb/android</string>
    <string name="utils_cancel">Cancel</string>
    <string name="utils_enable_internet">Enable Internet</string>
    <string name="isd_codes_edit">Enter Country Name</string>
    <string name="block_contacts">Contacts</string>
    <string name="blockedlist">Blocked List</string>
    <string name="newnumber">New Number</string>
    <string name="message">Message</string>
    <string name="call">Call</string>
    <string name="block_calls">Block All Calls</string>
    <string name="btn_block_calls">Block Calls</string>
    <string name="phone_code">+%s</string>
    <string name="error_unregister_carrier_number">EditText for carrier number is not registered. Register it using registerPhoneNumberTextView() before getFullNumber() or setFullNumber().</string>
    <string name="app_name1">Caller Name, Location Tracker</string>
    <string name="std_codes_edit">Enter City Name</string>
    <string name="location_permission_denied">This sample requires location permission to enable the my location layer. Please try again and grant access to use the location</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the my location feature, which shows your current location on the map</string>
    <string name="country_afghanistan_code">af</string>
    <string name="country_afghanistan_name">Afghanistan</string>
    <string name="country_afghanistan_number">93</string>
    <string name="country_aland_islands_code">ax</string>
    <string name="country_aland_islands_name">Åland Islands</string>
    <string name="country_aland_islands_number">358</string>
    <string name="country_albania_code">al</string>
    <string name="country_albania_name">Albania</string>
    <string name="country_albania_number">355</string>
    <string name="country_algeria_code">dz</string>
    <string name="country_algeria_name">Algeria</string>
    <string name="country_algeria_number">213</string>
    <string name="country_american_samoa_code">as</string>
    <string name="country_american_samoa_name">American Samoa</string>
    <string name="country_american_samoa_number">1684</string>
    <string name="country_andorra_code">ad</string>
    <string name="country_andorra_name">Andorra</string>
    <string name="country_andorra_number">376</string>
    <string name="country_angola_code">ao</string>
    <string name="country_angola_name">Angola</string>
    <string name="country_angola_number">244</string>
    <string name="country_anguilla_code">ai</string>
    <string name="country_anguilla_name">Anguilla</string>
    <string name="country_anguilla_number">1264</string>
    <string name="country_antarctica_code">aq</string>
    <string name="country_antarctica_name">Antarctica</string>
    <string name="country_antarctica_number">672</string>
    <string name="country_antigua_and_barbuda_code">ag</string>
    <string name="country_antigua_and_barbuda_name">Antigua and Barbuda</string>
    <string name="country_antigua_and_barbuda_number">1268</string>
    <string name="country_argentina_code">ar</string>
    <string name="country_argentina_name">Argentina</string>
    <string name="country_argentina_number">54</string>
    <string name="country_armenia_code">am</string>
    <string name="country_armenia_name">Armenia</string>
    <string name="country_armenia_number">374</string>
    <string name="country_aruba_code">aw</string>
    <string name="country_aruba_name">Aruba</string>
    <string name="country_aruba_number">297</string>
    <string name="country_australia_code">au</string>
    <string name="country_australia_name">Australia</string>
    <string name="country_australia_number">61</string>
    <string name="country_austria_code">at</string>
    <string name="country_austria_name">Austria</string>
    <string name="country_austria_number">43</string>
    <string name="country_azerbaijan_code">az</string>
    <string name="country_azerbaijan_name">Azerbaijan</string>
    <string name="country_azerbaijan_number">994</string>
    <string name="country_bahamas_code">bs</string>
    <string name="country_bahamas_name">Bahamas</string>
    <string name="country_bahamas_number">1242</string>
    <string name="country_bahrain_code">bh</string>
    <string name="country_bahrain_name">Bahrain</string>
    <string name="country_bahrain_number">973</string>
    <string name="country_bangladesh_code">bd</string>
    <string name="country_bangladesh_name">Bangladesh</string>
    <string name="country_bangladesh_number">880</string>
    <string name="country_barbados_code">bb</string>
    <string name="country_barbados_name">Barbados</string>
    <string name="country_barbados_number">1246</string>
    <string name="country_belarus_code">by</string>
    <string name="country_belarus_name">Belarus</string>
    <string name="country_belarus_number">375</string>
    <string name="country_belgium_code">be</string>
    <string name="country_belgium_name">Belgium</string>
    <string name="country_belgium_number">32</string>
    <string name="country_belize_code">bz</string>
    <string name="country_belize_name">Belize</string>
    <string name="country_belize_number">501</string>
    <string name="country_benin_code">bj</string>
    <string name="country_benin_name">Benin</string>
    <string name="country_benin_number">229</string>
    <string name="country_bermuda_code">bm</string>
    <string name="country_bermuda_name">Bermuda</string>
    <string name="country_bermuda_number">1441</string>
    <string name="country_bhutan_code">bt</string>
    <string name="country_bhutan_name">Bhutan</string>
    <string name="country_bhutan_number">975</string>
    <string name="country_bolivia_code">bo</string>
    <string name="country_bolivia_name">Bolivia</string>
    <string name="country_bolivia_number">591</string>
    <string name="country_bosnia_and_herzegovina_code">ba</string>
    <string name="country_bosnia_and_herzegovina_name">Bosnia And Herzegovina</string>
    <string name="country_bosnia_and_herzegovina_number">387</string>
    <string name="country_botswana_code">bw</string>
    <string name="country_botswana_name">Botswana</string>
    <string name="country_botswana_number">267</string>
    <string name="country_brazil_code">br</string>
    <string name="country_brazil_name">Brazil</string>
    <string name="country_brazil_number">55</string>
    <string name="country_british_indian_ocean_territory_code">io</string>
    <string name="country_british_indian_ocean_territory_name">British Indian Ocean Territory</string>
    <string name="country_british_indian_ocean_territory_number">246</string>
    <string name="country_british_virgin_islands_code">vg</string>
    <string name="country_british_virgin_islands_name">British Virgin Islands</string>
    <string name="country_british_virgin_islands_number">1284</string>
    <string name="country_brunei_darussalam_code">bn</string>
    <string name="country_brunei_darussalam_name">Brunei Darussalam</string>
    <string name="country_brunei_darussalam_number">673</string>
    <string name="country_bulgaria_code">bg</string>
    <string name="country_bulgaria_name">Bulgaria</string>
    <string name="country_bulgaria_number">359</string>
    <string name="country_burkina_faso_code">bf</string>
    <string name="country_burkina_faso_name">Burkina Faso</string>
    <string name="country_burkina_faso_number">226</string>
    <string name="country_burundi_code">bi</string>
    <string name="country_burundi_name">Burundi</string>
    <string name="country_burundi_number">257</string>
    <string name="country_cambodia_code">kh</string>
    <string name="country_cambodia_name">Cambodia</string>
    <string name="country_cambodia_number">855</string>
    <string name="country_cameroon_code">cm</string>
    <string name="country_cameroon_name">Cameroon</string>
    <string name="country_cameroon_number">237</string>
    <string name="country_canada_code">ca</string>
    <string name="country_canada_name">Canada</string>
    <string name="country_canada_number">1</string>
    <string name="country_cape_verde_code">cv</string>
    <string name="country_cape_verde_name">Cape Verde</string>
    <string name="country_cape_verde_number">238</string>
    <string name="country_cayman_islands_code">ky</string>
    <string name="country_cayman_islands_name">Cayman Islands</string>
    <string name="country_cayman_islands_number">1345</string>
    <string name="country_central_african_republic_code">cf</string>
    <string name="country_central_african_republic_name">Central African Republic</string>
    <string name="country_central_african_republic_number">236</string>
    <string name="country_chad_code">td</string>
    <string name="country_chad_name">Chad</string>
    <string name="country_chad_number">235</string>
    <string name="country_chile_code">cl</string>
    <string name="country_chile_name">Chile</string>
    <string name="country_chile_number">56</string>
    <string name="country_china_code">cn</string>
    <string name="country_china_name">China</string>
    <string name="country_china_number">86</string>
    <string name="country_christmas_island_code">cx</string>
    <string name="country_christmas_island_name">Christmas Island</string>
    <string name="country_christmas_island_number">61</string>
    <string name="country_cocos_keeling_islands_code">cc</string>
    <string name="country_cocos_keeling_islands_name">Cocos (keeling) Islands</string>
    <string name="country_cocos_keeling_islands_number">61</string>
    <string name="country_code_and_phone_code">(%1$s) +%2$s</string>
    <string name="country_colombia_code">co</string>
    <string name="country_colombia_name">Colombia</string>
    <string name="country_colombia_number">57</string>
    <string name="country_comoros_code">km</string>
    <string name="country_comoros_name">Comoros</string>
    <string name="country_comoros_number">269</string>
    <string name="country_congo_code">cg</string>
    <string name="country_congo_name">Republic of the Congo</string>
    <string name="country_congo_number">242</string>
    <string name="country_cook_islands_code">ck</string>
    <string name="country_cook_islands_name">Cook Islands</string>
    <string name="country_cook_islands_number">682</string>
    <string name="country_costa_rica_code">cr</string>
    <string name="country_costa_rica_name">Costa Rica</string>
    <string name="country_costa_rica_number">506</string>
    <string name="country_cote_d_ivoire_code">ci</string>
    <string name="country_cote_d_ivoire_name">Côte D\'ivoire</string>
    <string name="country_cote_d_ivoire_number">225</string>
</resources>