<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/topads"
        layout="@layout/pgrs_activity_main_smallnativeads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/topads"
        android:orientation="vertical">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/map"
            class="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:id="@+id/trafficlocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/map"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="6dp">

            <CheckBox
                android:id="@+id/traffic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:onClick="onTrafficToggled"
                android:text="@string/traffic_finder" />

            <CheckBox
                android:id="@+id/my_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:onClick="onMyLocationToggled"
                android:text="@string/my_location" />

            <CheckBox
                android:id="@+id/buildings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:onClick="onBuildingsToggled"
                android:text="@string/buildings"
                android:visibility="gone" />

            <CheckBox
                android:id="@+id/indoor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:onClick="onIndoorToggled"
                android:text="@string/indoor"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/maptype"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/trafficlocation"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="0dp">

            <Spinner
                android:id="@+id/layers_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
