<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgcolor"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="Block Selection"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:background="@drawable/realocation_whitebg"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/btns_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/from_contacts"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/realocation_bg_new_number"
                    android:text="@string/block_contacts"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/show_list"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_below="@+id/add_new"
                    android:layout_alignLeft="@+id/from_contacts"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/realocation_bg_new_number"
                    android:text="@string/blockedlist"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/add_new"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_below="@+id/from_contacts"
                    android:layout_alignLeft="@+id/from_contacts"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/realocation_bg_new_number"
                    android:text="@string/newnumber"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
